[project]
name = "health-data-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiocache>=0.12.2",
    "aiohttp>=3.9.1",
    "aioredis>=2.0.1",
    "aioresponses>=0.7.6",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "attrs>=23.1.0",
    "bcrypt>=4.1.2",
    "black>=23.11.0",
    "cachetools>=5.3.2",
    "celery>=5.3.4",
    "cerberus>=1.3.5",
    "click>=8.1.7",
    "cryptography>=41.0.7",
    "cython>=3.0.6",
    "factory-boy>=3.3.0",
    "fastapi>=0.104.1",
    "flake8>=6.1.0",
    "grpcio>=1.59.0",
    "grpcio>=1.59.0",
    "gunicorn>=21.2.0",
    "httpx>=0.25.2",
    "isort>=5.12.0",
    "jinja2>=3.1.2",
    "joblib>=1.3.2",
    "kombu>=5.3.4",
    "librosa>=0.10.1",
    "loguru>=0.7.2",
    "lxml>=4.9.3",
    "lz4>=4.3.2",
    "marshmallow>=3.20.1",
    "multidict>=6.0.4",
    "mypy>=1.7.1",
    "numpy>=1.26.3",
    "onnxruntime>=1.16.3",
    "opencv-python>=4.8.1.78",
    "openpyxl>=3.1.2",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-redis>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-sdk>=1.21.0",
    "orjson>=3.9.10",
    "pandas>=2.1.4",
    "passlib>=1.7.4",
    "pillow>=10.1.0",
    "plotly>=5.17.0",
    "prometheus-client>=0.19.0",
    "prophet>=1.1.5",
    "protobuf>=4.25.0",
    "psutil>=5.9.6",
    "psycopg2-binary>=2.9.9",
    "py-healthcheck>=1.10.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.8.0,<2.9.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pytz>=2023.3",
    "pyyaml>=6.0.1",
    "redis>=5.0.1",
    "scikit-learn>=1.3.2",
    "slowapi>=0.1.9",
    "soundfile>=0.12.1",
    "sqlalchemy>=2.0.25",
    "sqlalchemy-utils>=0.41.1",
    "statsmodels>=0.14.0",
    "tenacity>=8.2.3",
    "ujson>=5.8.0",
    "uvicorn[standard]>=0.24.0",
    "uvloop>=0.19.0 ; sys_platform != 'win32'",
    "xlsxwriter>=3.1.9",
    "xmltodict>=0.13.0",
    "yoyo-migrations>=8.2.0",
    "zstandard>=0.22.0",
]
