[project]
name = "med-knowledge"
version = "0.1.0"
description = "索克生活医学知识服务"
requires-python = ">=3.13.3"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "neo4j==5.17.0",
    "redis==5.0.1",
    "aioredis==2.0.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "prometheus-client==0.20.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    "structlog==24.1.0",
    "python-json-logger==2.0.7",
    "tenacity==8.2.3",
    "typer==0.9.0",
    "httpx==0.27.0",
    "grpcio==1.62.0",
    "grpcio-tools==1.62.0",
    "protobuf==4.25.3",
    "jinja2==3.1.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "slowapi==0.1.9",
    "cachetools==5.3.3",
    "celery==5.3.6"
]

classifiers = [
    "Programming Language :: Python :: 3.13",
]